--- a/custom.scss
+++ b/custom.scss
@@ -1,8 +1,8 @@
 /*-- scss:defaults  --*/
 $darky: #060C1C !default;
 $lighty: #ffffff !default;
-$highlighty: #A6AAAE !default;
-$hovery: #A430FF !default;
+$highlighty: #6D6D6D !default;
+$hovery: #97DD71 !default;
 $cuty: #70FFA9 !default;
 $primaryy: #FBA301 !default;
 $gray-800: $lighty !default;
